Revert "[Feature/Refactor] Adapt to new model API (#1689)"
This reverts commit cc332dcbae5ad2c08010169f0f31fc9c86e138e7.